--- a/NFV-DASHBOARD/package.json
+++ b/NFV-DASHBOARD/package.json
@@ -16,7 +16,8 @@
     "sails-hook-grunt": "^3.1.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^1.5.5",
-    "sync-request": "^6.0.0"
+    "sync-request": "^6.0.0",
+    "deep-extend": ">=0.5.1"
   },
   "devDependencies": {
     "@sailshq/eslint": "^4.19.3"
